#109 fix spacing in the hours counter

--- a/app/assets/stylesheets/all/dashboard.scss
+++ b/app/assets/stylesheets/all/dashboard.scss
@@ -1,7 +1,7 @@
 .dashboard-hours-div { width: 80%; margin: auto; height: 70px; }
 .dashboard-today-count { float:left; margin-left: 50px;}
-.dashboard-this-week-count { float:left; margin-left: 140px; }
-.dashboard-chart-total-hours { float: right; margin-right: 30px; }
+.dashboard-this-week-count { float:left; margin-left: 70px; }
+.dashboard-chart-total-hours { float: right; margin-right: 110px; }
 
 .table-tabs {
   padding: 0;
